k8s_use/discovery/kubeimooc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeimooc
  namespace: kubeimooc-system
  labels:
    app: kubeimooc
spec:
  selector:
    matchLabels:
      app: kubeimooc
  template:
    metadata:
      labels:
        app: kubeimooc
    spec:
      serviceAccount: kubeimooc-admin
      imagePullSecrets:
        - name: private-harbor-reg
      containers:
        - name: server
          image: harbor.baimei-server/kubeimooc/baimei-server:v1.8.1
          ports:
            - name: port0
              containerPort: 8082
        - name: web
          image: harbor.baimei-server/kubeimooc/kubeimooc-web:v1.7
          ports:
            - name: port0
              containerPort: 80
